--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<title>
 			Canvas editor
 		</title>
@@ -16,6 +16,12 @@
 			<input type="file" id="inputImage" accept="image/*" />
 		</div>
 		<canvas id="canvas" width="0" height="0"></canvas>
+		<div class="container">
+			<label for="magicEraser">Magic Eraser</label>
+			<input type="button" id="magicEraser"/>
+			<label for="backgroundEraser">Background Eraser</label>
+			<input type="button" id="backgroundEraser"/>			
+		</div>		
 		<div class="container">
 			<label for="saveImage">Сохранить картинку</label>
 			<input type="button" id="saveImage"/>
